--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   "author": "didier ngabo uwayo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "bulma": "^0.9.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
+    "express-session": "^1.17.1",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.3.0",
+    "sequelize": "^6.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -24,6 +31,7 @@
     "@babel/preset-env": "^7.10.4",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
